plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'com.diffplug.spotless' version '6.25.0'
    id 'checkstyle'
}

group = 'org.emulinker'
version = '1.0.2'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

configurations.all {
    // Exclude commons-logging to use SLF4J bridge instead
    exclude group: 'commons-logging', module: 'commons-logging'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Compatibility replacements for local JARs
    implementation 'org.apache.commons:commons-configuration2:2.11.0'
    implementation 'commons-httpclient:commons-httpclient:3.1'

    // Logging: SLF4J + Logback (Spring Boot includes Logback by default)
    // Bridge for libraries that still use commons-logging API
    implementation 'org.slf4j:jcl-over-slf4j:2.0.16'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

spotless {
    java {
        target 'src/*/java/**/*.java'
        eclipse('4.33').configFile(rootProject.file('config/eclipse-formatter.xml'))
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

checkstyle {
    toolVersion = '10.21.1'
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    ignoreFailures = true  // Set to false once legacy code is cleaned up
    maxWarnings = 100      // Gradually reduce as code is improved
}

tasks.withType(Checkstyle) {
    reports {
        xml.required = false
        html.required = true
    }
}

jar {
    enabled = false // Use bootJar for executable
}

bootJar {
    archiveFileName = 'emulinker.jar'
    destinationDirectory = file('build')
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.debug = true
    options.compilerArgs << "-Werror"
    options.compilerArgs << "-Xlint:deprecation"
    options.compilerArgs << "-Xlint:unchecked"
}
